# metodyProgramowania

./: .gitignore
lab2/: Brak_Tomasz_Program_01.cpp  CMakeLists.txt  main.cpp  plot.py
lab2/lib/: Engine.cpp  Engine.h  Engine.inl  EngineSEAK.cpp  EngineSEAK.h  EngineSEB.cpp  EngineSEB.h  Files.cpp  Files.inl  array.h
lab3/: CMakeLists.txt  Doxyfile  generate.py  main.cpp
lab3/docs/html/: Files_8h_source.html  Files_8inl_source.html  alghoritms_8h_source.html  alghoritms_8inl_source.html  annotated.html  annotated_dup.js  array_8h_source.html  classArray-members.html  classArray.html  classArray__coll__graph.map  classArray__inherit__graph.md5  classContainer-members.html  classContainer.html  classContainer.js  classContainer__inherit__graph.map  classContainer__inherit__graph.md5  classList-members.html  classList.html  classList.js  classList__inherit__graph.map  classList__inherit__graph.md5  classLogger-members.html  classLogger.html  classLogger.js  classes.html  conceptHashable.html  concepts.html  concepts.js  container_8h_source.html  container_8inl_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_cd35455db6922d0e13cfc97d440933d8.html  dir_cd35455db6922d0e13cfc97d440933d8.js  dir_cd35455db6922d0e13cfc97d440933d8_dep.map  doxygen_crawl.html  files.html  (+46 more)
lab3/input/: in1.txt  in2.txt  in3.txt  in4.txt  in_custom.txt
lab3/lib/: Files.h  Files.inl  alghoritms.inl  logging.h  logging.inl
lab3/src/: reader.cpp  reader.h
(+145 files in other folders)
